--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.4",
     "install": "^0.13.0",
     "lucide-react": "^0.441.0",
